# 2048_solver

./: .coveragerc  .pylintrc  README.md  pyproject.toml  tasks.py
Dokumentaatio/: kayttoohje.md  maarittelydokumentti.md  testaus_dokementti.md  toteutusraportti.md  viikkoraportti_1.md  viikkoraportti_2.md  viikkoraportti_3.md  viikkoraportti_4.md  viikkoraportti_5.md  viikkoraportti_6.md
Dokumentaatio/Kuvat/: 4096.xcf
src/: index.py
src/game/: game_logic.py  game_ui.py
src/solver/: expectimax.py  game_ai.py  game_solver.py  herustics.py
src/tests/game/: game_logic_test.py
src/tests/solver/: expectimax_test.py  solver_test.py
