[tool.poetry]
name = "2048-solver"
version = "0.1.0"
description = ""
authors = ["Kasper Envalds <kasper.envalds@gmail.com>"]
readme = "README.md"
packages = [{include = "2048_solver"}]

[tool.poetry.dependencies]
python = "^3.11"
pygame = "^2.5.1"
pylint = "^2.17.5"
invoke = "^2.2.0"
numpy = "^1.26.4"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
coverage = "^7.3.1"
autopep8 = "^2.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
